# python-project-49

./: .gitignore  README.md  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-progression.cast  brain_even.cast  demo_prime.cast  main.py  pyproject.toml  ruff.toml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
