[project]
name = "hexlet-code"
version = "0.1.0"
description = "Collection of mini logic games"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.ruff]
line-length = 80
preview = true

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
